integrate tooltip component on ship-to-contact page

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -243,7 +243,7 @@
                               <input type="text" class="form-control input-xmini2" ng-model="parcel.z" value="" size="16" maxlength="3" placeholder="Height" translate translate-attr-placeholder="MAIN.DIALOG.PARCELS.HEIGHT" ng-required="true">
                               <span class="dimension_unit" ng-if="ctrl.parcelUnit">cm</span>
                               <span class="dimension_unit" ng-if="!ctrl.parcelUnit">in</span>
-                              <a class="parcel-action" href="#" ng-click="ctrl.removeParcel($index)">
+                              <a class="parcel-action" ng-click="ctrl.removeParcel($index)">
                                 <i class="glyphicon glyphicon-minus-sign"></i>
                               </a>
                             </div><!-- /parcel -->
