--- a/app/views/ship-to-contact.html
+++ b/app/views/ship-to-contact.html
@@ -120,7 +120,7 @@
               <hr>
               <h3 class="form-group-legend" style="margin-bottom:10px; cursor: pointer;">
                 <span translate="SHIP_TO_CONTACT.SHIPMENT.TITLE">ABOUT YOUR SHIPMENT</span>
-                <a style="font-weight: normal; font-size: 11px; float: right;" href="#" translate="SHIP_TO_CONTACT.DISPLAY">display/hide</a>
+                <!--<a style="font-weight: normal; font-size: 11px; float: right;" href="#" translate="SHIP_TO_CONTACT.DISPLAY">display/hide</a>-->
               </h3>
               <div class="row" id="characteristics_container" style="display: block;">
                 <div class="col-md-6">
@@ -154,7 +154,7 @@
               <hr>
               <h3 class="form-group-legend" style="margin-bottom:10px; cursor: pointer;">
                 <span translate="SHIP_TO_CONTACT.INSURANCE.TITLE">VALUE &amp; OPTIONAL ADDITIONAL INSURANCE</span>
-                <a style="font-weight: normal; font-size: 11px; float: right;" href="#" translate="SHIP_TO_CONTACT.DISPLAY">display/hide</a>
+                <!--<a style="font-weight: normal; font-size: 11px; float: right;" href="#" translate="SHIP_TO_CONTACT.DISPLAY">display/hide</a>-->
               </h3>
 
               <div class="row" id="insurance_container" style="display: block;">
